<resources>
    <string name="g_app_name">Watero</string>
    <string name="g_skip">skip</string>
    <string name="g_change_language">change language</string>
    <string name="g_language">Language</string>

    <string name="l_onboarding_first_title">Life saving water</string>
    <string name="l_onboarding_first_desc">Water is the main component of our body. In order to stay healthy, you need to make up for its deficiencies and drink at least 8 glasses of water every day.</string>
    <string name="l_onboarding_second_title">Hydrate regularly</string>
    <string name="l_onboarding_second_desc">Water should be drunk slowly to gradually make up for the lack of water. Frequent drinking of a small amount of water makes the body manage it properly.</string>
    <string name="l_onboarding_third_title">Feel good</string>
    <string name="l_onboarding_third_desc">Proper hydration means well-being, better concentration, fewer headaches, healthy skin and less weight loss.</string>
    <string name="created_by">created by\nitcloud</string>

    <string name="intresting_info_watter">Pure water hydrates the body perfectly and contains zero calories. Regular drinking of water causes a metabolism overload, reduces headaches and improves well-being.</string>
    <string name="intresting_info_coffe">The caffeine contained in coffee stimulates and improves concentration, but it has diuretic effects and causes great dehydration of the body, which can affect the mood.</string>
    <string name="intresting_info_juice">The juices irrigate the body less than normal water but contains many vitamins. Check the labels of the juices in the shops, many of them contain large amounts of sugar, which is a good way to make you overweight.</string>
    <string name="intresting_info_alco">Alcohol dehydrates your body and makes you use the toilet more often. In addition, your skin becomes dry as paper and prone to wrinkles. Drink in moderation!</string>
    <string name="intresting_info_tea">Green tea has a slimming effect and hydrates the body well. However, drinking very large amounts of tea can have diuretic and dehydrating effects.</string>
    <string name="intresting_info_milk">Milk perfectly quenches thirst and hydrates the body. Additionally, it replenishes sodium lost with sweat and makes the body retain fluids better.</string>
    <string name="g_sex_man">male</string>
    <string name="g_sex_woman">female</string>
    <string name="go_next">Next</string>
    <string name="g_ready">Ready!</string>
    <string name="english_language" translatable="false">english</string>
    <string name="polish_language" translatable="false">polski</string>
    <string name="g_settings">Settings</string>
    <string name="g_notifiaction">Notifications</string>
    <string name="g_water">Water</string>
    <string name="g_milk">Milk</string>
    <string name="l_container">container</string>
    <string name="g_bootle">bottle</string>
    <string name="g_unit"> ml</string>
    <string name="g_add">Add</string>
    <string name="l_did_you_know">Did you know?</string>
    <string name="l_step_one">step 1 of 2</string>
    <string name="g_choose_sex">Select your sex</string>
    <string name="l_sex_instruction_text">Please specify your sex so we can calculate your daily water requirement.</string>
    <string name="g_day_target">Daily goal</string>
    <string name="l_instruction_one">The daily goal is the amount of water you should drink throughout the day to properly hydrate your body.</string>
    <string name="l_instruction_two">The daily target is calculated automatically when the sex and weight are set. If you think you should drink more or less water, you can edit this target.</string>
    <string name="l_instruction_three">To set the target, you must automatically re-edit the weight or sex.</string>
    <string name="l_instruction_four">You can change the measurement system - millilitres (ml) or ounces (oz) - in the settings.</string>
    <string name="g_spanish" translatable="false">Español</string>
    <string name="g_german" translatable="false">Deutsche</string>
    <string name="g_france" translatable="false">Français</string>
    <string name="g_close">close</string>
    <string name="l_main_tittle">Today you drank</string>
    <string name="g_day_target_text">of the daily target</string>
    <string name="l_your_today_target">Your goal today is</string>
    <string name="l_slowly_come_to_target">You\'re slowly moving towards your goal!</string>
    <string name="l_today_is">Today is an</string>
    <string name="l_active_day">active day</string>
    <string name="l_good_luck">, good luck!</string>
    <string name="l_units">Units</string>
    <string name="g_sex">Sex</string>
    <string name="g_weight">Weight</string>
    <string name="g_kilos">kg</string>
    <string name="g_ml">ml</string>
    <string name="l_target_in_active_days">Goal on active days</string>
    <string name="l_theme">Theme</string>
    <string name="l_dark">dark</string>
    <string name="l_time_type">Time format</string>
    <string name="g_24h">24h</string>
    <string name="g_wakeup">Wake-up</string>
    <string name="l_time_to_sleep">Bedtime</string>
    <string name="l_our_terms">Terms of use</string>
    <string name="l_rate_application">Rate the app</string>
    <string name="l_step_two">step 2 of 2</string>
    <string name="l_give_weight">Enter your weight</string>
    <string name="l_weight_information">Please give us your current weight so we can calculate your daily water requirement.</string>
    <string name="l_empty_data_info">Here are your drinks</string>
    <string name="g_12pm">12pm</string>
    <string name="g_confirm">confirm</string>
    <string name="g_units_type">Units of Measure</string>
    <string name="g_oz_lb">oz/lb</string>
    <string name="g_ml_kg">ml/kg</string>
    <string name="g_juice">Juice</string>
    <string name="g_coffe">Coffee</string>
    <string name="g_tea">Tea</string>
    <string name="g_alcohol">Alcohol</string>
    <string name="g_glass">glass</string>
    <string name="g_bidon">bottle</string>
    <string name="g_cup">cup</string>
    <string name="cup_coffe">mug</string>
    <string name="thermos">thermos</string>
    <string name="l_0_30">Stay hydrated to improve your well-being!</string>
    <string name="l_50_70">You are slowly moving towards your goal, keep going!</string>
    <string name="l_30_50">It\'s time for another glass of water!</string>
    <string name="l_70_100">You keep your body properly hydrated!</string>
    <string name="l_100_120">Congratulations! Today\'s goal has been achieved!</string>
    <string name="l_120">Be careful, excess water can be harmful!</string>
    <string name="l_choose_your_language">Choose your language</string>
    <string name="g_minute">minutes</string>
    <string name="g_every">every</string>
    <string name="f_15m">every 15 minutes</string>
    <string name="f_30m">every 30 minutes</string>
    <string name="f_45m">every 45 minutes</string>
    <string name="f_1h">"every 1h "</string>
    <string name="f_1h_15m">every 1h 15 minutes</string>
    <string name="f_1h_30m">every 1h 30 minutes</string>
    <string name="f_1h_45m">every 1h 45 minutes</string>
    <string name="f_2h">"every 2h "</string>
    <string name="f_2h_15m">every 2h 15 minutes</string>
    <string name="f_2h_30m">every 2h 30 minutes</string>
    <string name="f_2h_45m">every 2h 45 minutes</string>
    <string name="f_3h">"every 3h "</string>
    <string name="head_text_notification">It\'s time for the water!</string>
    <string name="text_notification">Hydrate your body!</string>
    <string name="l_application_version">version</string>
    <string name="g_yes">Yes</string>
    <string name="g_no">No</string>
    <string name="l_delete_row">Do you want to remove this drink?</string>
    <string name="removed_drink">The drink was removed!</string>

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
</resources>
