<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/g_sex"
        android:textColor="@color/text_white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/man_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_medium"
        android:paddingBottom="30dp"
        android:text="@string/g_sex_man"
        android:textColor="@color/text_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/man_img"
        app:layout_constraintStart_toStartOf="@+id/man_img"
        app:layout_constraintTop_toBottomOf="@+id/man_img" />


    <ImageView
        android:id="@+id/man_img"
        android:onClick="onSexChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/black_man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <ImageView
        android:id="@+id/woman_img"
        android:onClick="onSexChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/black_woman"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/man_img"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/man_img" />

    <TextView
        android:id="@+id/woman_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_medium"
        android:paddingBottom="30dp"
        android:text="@string/g_sex_woman"
        android:textColor="@color/text_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/woman_img"
        app:layout_constraintStart_toStartOf="@+id/woman_img"
        app:layout_constraintTop_toBottomOf="@+id/woman_img" />


</androidx.constraintlayout.widget.ConstraintLayout>